# Trading-Routine

./: .env.cloud.example  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-windows.txt  requirements.txt
.claude/: settings.json
.claude/routines/: midday.md  pre-session.md  session-close.md  session-open.md  weekly-review.md
.github/workflows/: pre-session.yml
config/: fundednext.yml  instruments.yml  sessions.yml
docs/: LIVE-CHECKLIST.md  SETUP-WINDOWS.md
memory/: performance.md  playbook.md  strategy.md
memory/backtest-results/portfolio-1y/: portfolio_stats.json  portfolio_trades.csv
memory/backtest-results/portfolio-1y-llm/: trades_with_llm.csv
scripts/: __init__.py  account.py  backtest.py  backtest_llm.py  cli.py  clock.py  config.py  decide.py  guardrails.py  journal.py  management.py  notify.py  promote.py  research.py  sessions.py  stats.py  trade.py
scripts/broker/: __init__.py  base.py  mock_broker.py  mt5_broker.py
tests/: conftest.py  test_account.py  test_backtest.py  test_clock.py  test_decide.py  test_guardrails.py  test_journal.py  test_manage_runners.py  test_mock_broker.py  test_pending_orders.py  test_stats.py  test_trade.py
