[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-routine"
version = "0.1.0"
description = "24/7 AI trading agent for MT5 + FundedNext, driven by Claude Code routines"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["scripts"]
omit = [
    "scripts/broker/mt5_broker.py",  # Windows-only
    "scripts/cli.py",                # Thin argparse glue
    "scripts/notify.py",             # Discord webhook side-effect
    "scripts/research.py",           # Perplexity HTTP integration
    "scripts/promote.py",            # Interactive CLI, manual testing
]

[tool.coverage.report]
fail_under = 80
show_missing = true
